# poleposition

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  docusaurus.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sidebars.js  zamanla-buyuyen-projeler-ve-refactor.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check_release_version.py
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
assets/diagram/: poleposition-cli-architecture.html
docs/: agent-recommendation.md  architecture-diagram.md  architecture.md  auth-workflow.md  cli.md  code-style.md  configuration.md  contributing.md  data-structures.md  database.md  feature-status.md  getting-started.md  index.md  maintainer-guide.md  module-templates.md  project-checks.md  release-upgrade-notes.md  spring-dotnet-module-structure.md  troubleshooting.md  upgrade-command.md
docs/assets/diagram/: poleposition-cli-architecture.html
docs/assets/scripts/: font-size.js
docs/assets/styles/: font-size.css
docs/examples/: auth-foundation.md  html-swap.md  index.md  kafka-quick-start.md  openai-prompt.md  rabbitmq-quick-start.md  redis-cache.md  user-registration.md
docs/integrations/: index.md  kafka.md  llm.md  rabbitmq.md  redis.md  rq.md
examples/: README.md
examples/auth-foundation/: README.md
examples/html-swap/: README.md
examples/kafka-quick-start/: README.md
examples/kafka-quick-start/app/: .env.example  .poleposition.toml  Dockerfile  README.md  compose.kafka.yaml  pyproject.toml
examples/kafka-quick-start/app/tests/: conftest.py
examples/openai-prompt/: README.md
examples/openai-prompt/app/: .env.example  .gitignore  .poleposition.toml  AGENTS.md  Dockerfile  README.md  pyproject.toml
examples/openai-prompt/app/tests/: conftest.py
examples/rabbitmq-quick-start/: README.md
examples/rabbitmq-quick-start/app/: .env.example  .poleposition.toml  Dockerfile  README.md  pyproject.toml
examples/rabbitmq-quick-start/app/tests/: conftest.py
examples/redis-cache/: README.md
examples/redis-cache/app/: .env.example  .poleposition.toml  Dockerfile  README.md  compose.yaml  pyproject.toml
examples/redis-cache/app/tests/: conftest.py
pole_position/: __init__.py
pole_position/cli/: command.py  console.py  help.py  main.py  registry.py  usage.py
pole_position/cli/commands/: __init__.py  check.py  completion.py  delete.py  startproject.py  upgrade.py  version.py
pole_position/cli/commands/add/: __init__.py  auth.py  integration.py  (+1 more)
pole_position/cli/services/: auth_creator.py  completion.py  database_options.py  db_runner.py  dependency_contract.py  installer.py  integration_creator.py  integration_specs.py  module_creator.py  module_remover.py  module_templates.py  project_checker.py  project_creator.py  project_deleter.py  project_fixer.py  project_locator.py  project_manifest.py  project_name.py  project_wiring.py  pyproject_editor.py  template.py  template_renderer.py
pole_position/cli/usage/: __init__.py  catalog.py  model.py
pole_position/template/: .dockerignore  .env.example  .gitignore  .poleposition.toml  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
pole_position/template/migrations/: env.py  script.py.mako
pole_position/template/tests/: conftest.py  test_status.py
pole_position/tests/: test_add_auth.py  test_add_module.py  test_check_command.py  test_cli.py  test_completion.py  test_console.py  test_db_commands.py  test_delete_command.py  test_dependency_contract.py  test_e2e_workflows.py  test_installer.py  test_integration_specs.py  test_module_creator.py  test_module_dependencies.py  test_module_templates.py  test_polepos_data.py  test_project_checker.py  test_project_manifest.py  test_project_name.py  test_pyproject_editor.py  test_remove_module.py  test_startproject.py
polepos/: __init__.py
polepos/data/: __init__.py  cache.py  graph.py  ordered_set.py  priority.py  sorted.py  trie.py  union_find.py
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/feature-status/: index.html
site/project-checks/: index.html
site/search/: search_index.json
src/css/: custom.css
src/theme/: Root.js
static/assets/diagram/: poleposition-cli-architecture.html
(+294 files in other folders)
