[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poleposition"
version = "0.0.11"
description = "CLI tool to scaffold production-ready FastAPI projects with clean architecture and built-in logging"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }

keywords = [
    "fastapi",
    "cli",
    "scaffold",
    "template",
    "starter",
    "backend",
    "api",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
poleposition = "pole_position.cli.main:main"
polepos = "pole_position.cli.main:main"

[project.urls]
Homepage = "https://github.com/erenertem/poleposition"
Repository = "https://github.com/erenertem/poleposition"
Issues = "https://github.com/erenertem/poleposition/issues"

[tool.setuptools.packages.find]
include = ["pole_position*"]

[tool.setuptools.package-data]
pole_position = ["template/**/*"]

[tool.pytest.ini_options]
testpaths = ["pole_position/tests"]
pythonpath = ["."]
addopts = ["-ra"]