[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poleposition"
version = "0.0.24"
description = "Project lifecycle CLI for starting and growing enterprise FastAPI projects"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }

keywords = [
    "fastapi",
    "cli",
    "project-lifecycle",
    "lifecycle",
    "migrations",
    "scaffold",
    "template",
    "starter",
    "backend",
    "api",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
poleposition = "pole_position.cli.main:main"
polepos = "pole_position.cli.main:main"

[project.urls]
Homepage = "https://erenertemden.github.io/poleposition/"
Repository = "https://github.com/erenertemden/poleposition"
Issues = "https://github.com/erenertemden/poleposition/issues"

[tool.setuptools.packages.find]
include = ["pole_position*"]

[tool.setuptools.package-data]
pole_position = [
    "cli/services/module_templates/files/**/*.tpl",
    "template/**/*",
    "template/.dockerignore",
    "template/.env.example",
    "template/.gitignore",
]

[tool.setuptools.exclude-package-data]
pole_position = [
    "template/**/__pycache__/*",
    "template/**/*.pyc",
]

[tool.pytest.ini_options]
testpaths = ["pole_position/tests"]
pythonpath = ["."]
addopts = ["-ra"]
markers = [
    "docker_e2e: end-to-end Docker workflow tests for generated projects",
    "e2e: end-to-end workflow tests that exercise generated projects with subprocesses",
]
